appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- extendedWaitUntil:
    visible: 'Components'
    timeout: 30000
- runFlow:
    when:
      platform: iOS
    commands:
      - openLink: rntester://example/FabricInteropLayer/add-children
      - extendedWaitUntil:
          visible:
            id: 'add-marker-btn'
          timeout: 30000
      - assertVisible:
          id: 'marker_0'
      - assertVisible:
          id: 'marker_1'
      - assertVisible:
          id: 'marker_2'
      - assertVisible:
          id: 'marker_3'
      - assertVisible:
          id: 'marker_4'
      - assertNotVisible:
          id: 'marker_5'
      - tapOn:
          id: 'add-marker-btn'
      - assertVisible:
          id: 'marker_5'
