appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- extendedWaitUntil:
    visible: 'Components'
    timeout: 30000
- openLink: rntester://example/PressableExample/content-press
- extendedWaitUntil:
    visible:
      id: 'one_press_me_button'
    timeout: 30000
- tapOn:
    id: 'one_press_me_button'
- assertVisible:
    id: 'pressable_press_console'
    text: 'onPress'
- tapOn:
    id: 'one_press_me_button'
- assertVisible:
    id: 'pressable_press_console'
    text: '2x onPress'
- openLink: rntester://example/PressableExample/feedback-events
- extendedWaitUntil:
    visible:
      id: 'pressable_feedback_events_button'
    timeout: 30000
- tapOn:
    id: 'pressable_feedback_events_button'
- assertVisible:
    text: 'press'
- assertVisible:
    text: 'pressOut'
- longPressOn:
    id: 'pressable_feedback_events_button'
- assertVisible:
    text: 'pressIn'
- assertVisible:
    text: 'longPress'
- assertVisible:
    text: 'pressOut'
- openLink: rntester://example/PressableExample/hit-slop
- extendedWaitUntil:
    visible:
      id: 'pressable_hit_slop_button'
    timeout: 30000
- tapOn:
    id: 'pressable_hit_slop_button'
- assertVisible:
    id: 'pressable_hit_slop'
- openLink: rntester://example/PressableExample/text-press
- extendedWaitUntil:
    visible:
      id: 'tappable_text'
    timeout: 30000
- tapOn:
    id: 'tappable_text'
- assertVisible:
    id: 'tappable_text_console'
    text: 'text onPress'
